Fix some background alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,25 @@
 .App {
+    padding-bottom: 60px;
+}
+
+html {
+    min-height: 100vh;
+}
+
+body {
+    background-attachment: fixed;
     background-size: cover;
     background-position: center;
-    /* height: calc(100vh - 56px); */
-    height: 100vh;
-    width: 100vw;
+    min-height: 100%;
+    min-width: 100%;
     margin: 0;
     padding: 0;
-    transition: 1s background-image;
+    /* Fix margin collapse issues */
+    /* display: flex; */
+}
+
+body > * {
+    flex: 1 0 auto;
 }
 
 .schedule-time {
